working filter BSA version

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 
 PROTOCOL_ROOT=$(dirname $(realpath ${BASH_SOURCE}))     # for development you don't need to change this
 ROOT=${PROTOCOL_ROOT%${PROTOCOL_ROOT#/*/}}
-SINGULARITY_ROOT=$PROTOCOL_ROOT                         # for development change this to the share compiled installation
+SINGULARITY_ROOT=/sci/labs/fora//share/softwares/PatchMAN-forServer/   # for development change this to the share compiled installation
 
 
 # With default singularity installation, no need to touch these!
